Fixed D4D css interferring with main css
- This should clear up problems with PR #2060
- Previously was combining css with html, which styled the html
  appropriately, but messed up the main page header
- Made an unnecessary (but still slightly better) change to
  OrganizationDetailsPage component while trying to fix the header issue
- Figured out how to import specific D4D css files under specific class
  selectors in App.scss, like this:

    .B2AI_ORG_114_d4d {
      @import 'assets/d4d/B2AI_ORG_114_d4d';
    }

- When css for all D4Ds is unified, this will need to change somewhat
- Got rid of unused .d4d-html-style in _style_overrides.scss
- Fixed DataSet_denormalized version in resources.tsx
- Fixed type and unused import errors and warnings in details pages

--- a/apps/portals/b2ai.standards/src/App.scss
+++ b/apps/portals/b2ai.standards/src/App.scss
@@ -5,3 +5,16 @@
 
 // style_overrides should be last to ensure its styles have highest priority
 @use './config/style/style_overrides';
+
+// Add the scoped D4D styles
+.B2AI_ORG_114_d4d {
+  @import 'assets/d4d/B2AI_ORG_114_d4d';
+}
+
+.B2AI_ORG_116_d4d {
+  @import 'assets/d4d/B2AI_ORG_116_d4d';
+}
+
+.B2AI_ORG_117_d4d {
+  @import 'assets/d4d/B2AI_ORG_117_d4d';
+}
